--- a/learn/02-abf.html
+++ b/learn/02-abf.html
@@ -152,7 +152,9 @@ load_all(&quot;~/git/variani/finemapr/&quot;)</code></pre>
 <h1>Wakefield’s functions</h1>
 <pre class="r"><code># This function calculates BFDP, the approximate Pr( H0 | thetahat )
 #
-# @href http://faculty.washington.edu/jonno/BFDP.R
+# http://faculty.washington.edu/jonno/BFDP.R
+#
+# doi.org/10.1086/519024, p. 120, formula (6) and above
 #
 # @param thetahat an estiamte of the log relative risk
 # @param V the variance of this estimate
@@ -171,6 +173,9 @@ BFDPfunV &lt;- function(thetahat, V, W, pi1)
   list(BF = BF, pH0 = pH0, pH1 = pH1, BFDP = BFDP)
 }
 
+# This function computes ABF according to Wakefield (doi.org/10.1086/519024)
+#
+# doi.org/10.1038/ng.2435, Online Methods, Section Bayesian approach
 ABFfun &lt;- function(Z, V, W)
 {
   r &lt;- W / (V + W)
